# qmonster

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  VERSION.md  build.rs  mission-history.yaml  mission.yaml  package.json
.mission/evals/: Qmonster-v0.4.0-2026-04-20-phase1-codex-review.result.yaml  Qmonster-v0.4.0-2026-04-20-phase1-review.result.yaml  Qmonster-v0.4.0-2026-04-20-phase2-codex-review.result.yaml  Qmonster-v0.4.0-2026-04-20-phase2-review.result.yaml  Qmonster-v0.4.0-2026-04-20-phase3a-review.result.yaml  Qmonster-v0.4.0-2026-04-21-phase3a-codex-review.result.yaml  Qmonster-v0.4.0-2026-04-21-phase3b-gemini-artifact-backfill-review.result.yaml  Qmonster-v0.4.0-2026-04-21-phase3b-gemini-template-confirm-review.result.yaml  Qmonster-v0.4.0-2026-04-21-phase3b-ledger-normalization-review.result.yaml  Qmonster-v0.4.0-2026-04-21-phase3b-retry-review.result.yaml  Qmonster-v0.4.0-2026-04-21-phase3b-review.result.yaml  Qmonster-v0.4.0-2026-04-21-phase3b-strong-rec-cleanup-gemini-review.result.yaml  Qmonster-v0.4.0-2026-04-21-phase3b-strong-rec-cleanup-review.result.yaml  Qmonster-v0.4.0-2026-04-21-phase3b-strong-rec-review.result.yaml  (+44 more)
config/: claude-settings.example.json  pricing.example.toml  qmonster.example.toml
docs/ai/: ARCHITECTURE.md  (+5 more)
scripts/: check-tmux-source-parity.sh  run-qmonster-control-mode-once.sh  run-qmonster.sh  verify-shared.sh
src/: lib.rs  main.rs
tests/: event_loop_integration.rs  false_positive_regression.rs  idle_state_regression.rs  sim.rs
tmux/: qmonster.tmux.conf.example
(+116 files in other folders)
