[package]
name = "qmonster"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
notify-rust = "4"
directories = "5"

[dev-dependencies]
tempfile = "3"
