[package]
name = "qmonster"
version = "0.1.0"
edition = "2024"
default-run = "qmonster"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
arboard = { version = "3", default-features = false }
thiserror = "1"
clap = { version = "4", features = ["derive"] }
notify-rust = "4"
directories = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
